Refactor(General)
